docs/envoy/v1.37.2/_sources/api-v3/extensions/geoip_providers/common/v3/common.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/geoip_providers/common/v3/common.proto:

Common Geolocation Provider Configuration (proto)
=================================================


Common geolocation provider :ref:`configuration overview <config_geoip_providers_common>`.
Common configuration shared across geolocation providers.




.. _envoy_v3_api_msg_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig:

extensions.geoip_providers.common.v3.CommonGeoipProviderConfig
--------------------------------------------------------------


:repo:`[extensions.geoip_providers.common.v3.CommonGeoipProviderConfig proto] <api/envoy/extensions/geoip_providers/common/v3/common.proto#L18>`




.. code-block:: json
  :force:

  {
    "geo_headers_to_add": {...},
    "geo_field_keys": {...}
  }

.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.geo_headers_to_add:


geo_headers_to_add
  (:ref:`extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationHeadersToAdd <envoy_v3_api_msg_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationHeadersToAdd>`) Configuration for geolocation headers to add to HTTP requests.
  This field is deprecated in favor of ``geo_field_keys``. If both are set, ``geo_field_keys``
  takes precedence.


.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.geo_field_keys:


geo_field_keys
  (:ref:`extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationFieldKeys <envoy_v3_api_msg_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationFieldKeys>`) Configuration for geolocation field keys.
  At least one of ``geo_headers_to_add`` or ``geo_field_keys`` must be set.


.. _envoy_v3_api_msg_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationHeadersToAdd:

extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationHeadersToAdd
--------------------------------------------------------------------------------------


:repo:`[extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationHeadersToAdd proto] <api/envoy/extensions/geoip_providers/common/v3/common.proto#L26>`

The set of geolocation headers to add to request. If any of the configured headers is present
in the incoming request, it will be overridden by the :ref:`HTTP GeoIP filter <config_http_filters_geoip>`.

.. attention::
  This field is deprecated in favor of :ref:`geo_field_keys
  <envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.geo_field_keys>`.



.. code-block:: json
  :force:

  {
    "country": ...,
    "city": ...,
    "region": ...,
    "asn": ...,
    "is_anon": ...,
    "anon": ...,
    "anon_vpn": ...,
    "anon_hosting": ...,
    "anon_tor": ...,
    "anon_proxy": ...,
    "isp": ...,
    "apple_private_relay": ...
  }

.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationHeadersToAdd.country:


country
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, the header will be used to populate the country ISO code associated with the IP address.


.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationHeadersToAdd.city:


city
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, the header will be used to populate the city associated with the IP address.


.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationHeadersToAdd.region:


region
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, the header will be used to populate the region ISO code associated with the IP address.
  The least specific subdivision will be selected as the region value.


.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationHeadersToAdd.asn:


asn
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, the header will be used to populate the ASN associated with the IP address.


.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationHeadersToAdd.is_anon:


is_anon
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This field is deprecated; use ``anon`` instead.


.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationHeadersToAdd.anon:


anon
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, the IP address will be checked if it belongs to any type of anonymization network (e.g., VPN, public proxy).
  The header will be populated with the check result. Header value will be set to either ``true`` or ``false`` depending on the check result.


.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationHeadersToAdd.anon_vpn:


anon_vpn
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, the IP address will be checked if it belongs to a VPN and the header will be populated with the check result.
  Header value will be set to either ``true`` or ``false`` depending on the check result.


.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationHeadersToAdd.anon_hosting:


anon_hosting
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, the IP address will be checked if it belongs to a hosting provider and the header will be populated with the check result.
  Header value will be set to either ``true`` or ``false`` depending on the check result.


.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationHeadersToAdd.anon_tor:


anon_tor
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, the IP address will be checked if it belongs to a TOR exit node and the header will be populated with the check result.
  Header value will be set to either ``true`` or ``false`` depending on the check result.


.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationHeadersToAdd.anon_proxy:


anon_proxy
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, the IP address will be checked if it belongs to a public proxy and the header will be populated with the check result.
  Header value will be set to either ``true`` or ``false`` depending on the check result.


.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationHeadersToAdd.isp:


isp
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, the header will be used to populate the ISP associated with the IP address.


.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationHeadersToAdd.apple_private_relay:


apple_private_relay
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, the IP address will be checked if it belongs to the ISP named iCloud Private Relay and the header will be populated with the check result.
  Header value will be set to either ``true`` or ``false`` depending on the check result.



.. _envoy_v3_api_msg_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationFieldKeys:

extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationFieldKeys
-----------------------------------------------------------------------------------


:repo:`[extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationFieldKeys proto] <api/envoy/extensions/geoip_providers/common/v3/common.proto#L95>`

The set of geolocation field keys to use for storing lookup results.
These keys define how the geolocation lookup results will be stored. The actual storage
mechanism depends on the filter using the provider:

- The :ref:`HTTP GeoIP filter <config_http_filters_geoip>` stores results as HTTP request headers.
- The :ref:`Network GeoIP filter <config_network_filters_geoip>` stores results in the
  connection's filter state under the well-known key ``envoy.geoip``.




.. code-block:: json
  :force:

  {
    "country": ...,
    "city": ...,
    "region": ...,
    "asn": ...,
    "anon": ...,
    "anon_vpn": ...,
    "anon_hosting": ...,
    "anon_tor": ...,
    "anon_proxy": ...,
    "isp": ...,
    "apple_private_relay": ...
  }

.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationFieldKeys.country:


country
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, the key will be used to populate the country ISO code associated with the IP address.


.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationFieldKeys.city:


city
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, the key will be used to populate the city associated with the IP address.


.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationFieldKeys.region:


region
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, the key will be used to populate the region ISO code associated with the IP address.
  The least specific subdivision will be selected as the region value.


.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationFieldKeys.asn:


asn
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, the key will be used to populate the ASN associated with the IP address.


.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationFieldKeys.anon:


anon
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, the IP address will be checked if it belongs to any type of anonymization network
  (e.g., VPN, public proxy). The result will be stored with this key. Value will be set to
  either ``true`` or ``false`` depending on the check result.


.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationFieldKeys.anon_vpn:


anon_vpn
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, the IP address will be checked if it belongs to a VPN and the result will be stored
  with this key. Value will be set to either ``true`` or ``false`` depending on the check result.


.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationFieldKeys.anon_hosting:


anon_hosting
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, the IP address will be checked if it belongs to a hosting provider and the result
  will be stored with this key. Value will be set to either ``true`` or ``false`` depending on
  the check result.


.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationFieldKeys.anon_tor:


anon_tor
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, the IP address will be checked if it belongs to a TOR exit node and the result will
  be stored with this key. Value will be set to either ``true`` or ``false`` depending on the
  check result.


.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationFieldKeys.anon_proxy:


anon_proxy
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, the IP address will be checked if it belongs to a public proxy and the result will
  be stored with this key. Value will be set to either ``true`` or ``false`` depending on the
  check result.


.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationFieldKeys.isp:


isp
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, the key will be used to populate the ISP associated with the IP address.


.. _envoy_v3_api_field_extensions.geoip_providers.common.v3.CommonGeoipProviderConfig.GeolocationFieldKeys.apple_private_relay:


apple_private_relay
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, the IP address will be checked if it belongs to the ISP named iCloud Private Relay
  and the result will be stored with this key. Value will be set to either ``true`` or ``false``
  depending on the check result.



